test/spec_vectors/memory_copy/fail/module_45.wat
(module (memory 1 1) (func (export "testfn") (memory.copy (f32.const 10) (i64.const 20) (i64.const 30))))